# robodog2

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: rbd_x3_bridge.yaml
docs/: LAVA_TUBE.md  PLANEJAMENTO_LAVA_TUBE.md
launch/: navigation_dwa_launch.py  rbd_bringup.launch.py  rbd_casa_x3_launch.py  rbd_gazebo_launch.py  rbd_gz_x3_launch.py  rbd_lava_tube_fuel_launch.py  rbd_lava_tube_launch.py  rbd_sim_minimal_launch.py  rbd_simulador_x3_launch.py  rbd_slam_x3_launch.py
maps/: rbd_mapa_moveis.pgm  rbd_mapa_moveis.yaml  rbd_mapa_vazio.pgm  rbd_mapa_vazio.yaml
params/: dwa_nav_params.yaml  rbd_dwa_nav_params.yaml  rbd_sim_dwa_params.yaml
robodog2/: rbd_funcoes.py  rbd_md.py  rbd_nav_simples.py  rbd_navega.py  rbd_odom_tf.py  rbd_tabelas.py
rviz/: README.md  map.rviz  robodog1.rviz  robodog2.rviz
scripts/: rbd_lava_tube.sh  rbd_lava_tube_fuel.sh
tools/: convert_world_classic_to_harmonic.py
urdf/: README.md  rbd_X3_sim.urdf.xacro  rbd_common_properties.xacro  rbd_turtlebot3_waffle.gazebo2 1.00.xacro  rbd_turtlebot3_waffle.gazebo2.xacro  rbd_turtlebot3_waffle3.urdf 1.01.xacro.xacro  rbd_turtlebot3_waffle3.urdf.xacro  turtlebot3_waffle.gazebo2 1.00.xacro  turtlebot3_waffle.gazebo2 2.00.xacro  turtlebot3_waffle.gazebo2.xacro
worlds/: README.md  cma_06.world  cma_08.world  cma_12.world  cma_moveis.sdf  cma_moveis.world  cma_moveis_13.world  cma_moveis_15.world  cma_moveis_79.world  cma_moveis_antes_migracao.world  cma_moveis_bkp.world  cma_moveis_c.world  cma_vazio  cma_vazio.sdf  cma_vazio.world  cma_vazio_antes_fix.world  lava_tube.world  (+7 more)
(+134 files in other folders)
